scripts/nullaway/nullgtn/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8.txt
../nullgtn/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/expert_system/Rhythmic_Block.java:99: error: [NullAway] initializer method does not guarantee @NonNull field rhythmicValues (line 94) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    private Rhythmic_Block(int beatVal) {
            ^
    (see http://t.uber.com/nullaway )
../nullgtn/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/expert_system/Tonality.java:27: error: [NullAway] initializer method does not guarantee @NonNull field relatedKeys (line 20) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Tonality(Key k, int i) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/expert_system/Key.java:64: error: [NullAway] initializer method does not guarantee @NonNull fields relativeMinor (line 36), chord (line 44) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    private Key(int oct0, int oct1, int oct2, int oct3, int oct4, int oct5, int oct6, int oct7, int oct8, int oct9, int oct10, int oct11, int oct12) {
            ^
    (see http://t.uber.com/nullaway )
../nullgtn/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/expert_system/Chord.java:27: error: [NullAway] initializer method does not guarantee @NonNull field scales (line 22) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    private Chord() {
            ^
    (see http://t.uber.com/nullaway )
../nullgtn/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/expert_system/Scale.java:76: error: [NullAway] initializer method does not guarantee @NonNull fields wholeScale (line 66), key (line 68), octaves (line 70) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    private Scale(int root, int interval2, int interval3, int interval4, int interval5, int interval6) {
            ^
    (see http://t.uber.com/nullaway )
../nullgtn/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/expert_system/Scale.java:82: error: [NullAway] initializer method does not guarantee @NonNull fields wholeScale (line 66), key (line 68), octaves (line 70) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    private Scale(int root, int interval2, int interval3, int interval4, int interval5, int interval6, int interval7) {
            ^
    (see http://t.uber.com/nullaway )
../nullgtn/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/expert_system/Scale.java:88: error: [NullAway] initializer method does not guarantee @NonNull fields wholeScale (line 66), key (line 68), octaves (line 70) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    private Scale(int root, int interval2, int interval3, int interval4, int interval5, int interval6, int interval7, int interval8) {
            ^
    (see http://t.uber.com/nullaway )
../nullgtn/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/expert_system/DesiredLoudness.java:27: error: [NullAway] initializer method does not guarantee @NonNull fields allDynamics (line 18), theShape (line 20), howCloseAreTheDynamics (line 22) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public DesiredLoudness(Dynamic d) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/expert_system/DesiredLoudness.java:32: error: [NullAway] initializer method does not guarantee @NonNull fields allDynamics (line 18), howCloseAreTheDynamics (line 22) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public DesiredLoudness(Dynamic d, DynamicShape ds) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/TargetChromosome.java:27: error: [NullAway] initializer method does not guarantee @NonNull field targetFeel (line 22) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public TargetChromosome(Tonality t, DesiredLoudness dl) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/Chromosome.java:71: error: [NullAway] initializer method does not guarantee @NonNull fields scaleIntervals (line 31), phrase (line 35), allKeys (line 46), allScales (line 48), allDynamics (line 50), allDynamicShapes (line 52), allRhythms (line 54), keyGene (line 57), scaleGene (line 59), dynamicGene (line 61), dshapeGene (line 63), rhythmGenes (line 65) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Chromosome() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/Chromosome.java:76: error: [NullAway] initializer method does not guarantee @NonNull fields scaleIntervals (line 31), phrase (line 35), allKeys (line 46), allScales (line 48), allDynamics (line 50), allDynamicShapes (line 52), allRhythms (line 54), keyGene (line 57), scaleGene (line 59), dynamicGene (line 61), dshapeGene (line 63) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Chromosome(int _min, int _max) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/Chromosome.java:87: error: [NullAway] initializer method does not guarantee @NonNull fields scaleIntervals (line 31), phrase (line 35), allKeys (line 46), allScales (line 48), allDynamics (line 50), allDynamicShapes (line 52), allRhythms (line 54), keyGene (line 57), dynamicGene (line 61), dshapeGene (line 63) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Chromosome(int _min, int _max, Key k, Scale s) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/Chromosome.java:95: error: [NullAway] read of @NonNull field scaleGene before initialization
        this.scaleGene.initialise(this.keyGene);
            ^
    (see http://t.uber.com/nullaway )
../nullgtn/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/Chromosome.java:95: error: [NullAway] read of @NonNull field keyGene before initialization
        this.scaleGene.initialise(this.keyGene);
                                      ^
    (see http://t.uber.com/nullaway )
../nullgtn/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/Phrase.java:36: error: [NullAway] initializer method does not guarantee @NonNull field musicalPhrase (line 31) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Phrase(int min, int max, Scale s, Dynamic d, DynamicShape ds, ArrayList<Rhythmic_Block> arr) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/Note.java:25: error: [NullAway] initializer method does not guarantee @NonNull fields noteVal (line 18), noteData (line 20) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Note() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/Note.java:28: error: [NullAway] initializer method does not guarantee @NonNull field noteData (line 20) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Note(int t, int v, String s) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/networking/OSCClient.java:50: error: [NullAway] initializer method does not guarantee @NonNull fields oscP5 (line 25), myRemoteLocation (line 27), noteValues (line 33), velocityValues (line 35), millisValues (line 37), theFuzzySystem (line 41), theGeneticAlgorithm (line 43), response (line 45) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public OSCClient() {
           ^
    (see http://t.uber.com/nullaway )
19 errors
